--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "bootstrap": "^4.0.0",
-    "compass-mixins": "^0.12.10",
     "css-loader": "^0.28.9",
     "eslint-plugin-async-await": "0.0.0",
     "express": "^4.16.2",
@@ -55,10 +53,9 @@
     "uuid": "^3.2.1",
     "uuid-1345": "^0.99.6",
     "webpack": "^3.10.0",
-    "webpack-zip-files-plugin": "^1.0.0",
+    "webpack-zip-files-plugin": "^1.0.0"
   },
   "peerDependencies": {
     "knex-migrator": "@latest"
   }
 }
-  
